# django-tasks-celery

./: .gitignore  LICENSE  MANIFEST.in  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
django_tasks_celery/: __init__.py  app.py  apps.py  backend.py  compat.py
django_tasks_fennel/: app.py  apps.py  backend.py  compat.py
tests/: __init__.py  settings.py  tasks.py  tests.py
